# 3dfx-Driver-Cmake-Files

./: README
Src/Video/Displays/: CMakeLists.txt  run_cmake.bat
Src/Video/Displays/INC/: DX95TYPE.H
Src/Video/Miniport/: CMakeLists.txt  run_cmake_msvc12.sh
